alignment issue

--- a/src/app/join-chat/join-chat.component.css
+++ b/src/app/join-chat/join-chat.component.css
@@ -6,7 +6,13 @@
 	/* transform: translate(-50%, -50%); */
 	background:linear-gradient(#141e30, #243b55)
 }
-
+.headline{
+	height:5vh;
+}
+.details{
+	color: beige;text-decoration: none;font-size: 19px;
+	padding: 5px;
+}
 
 img {
 	max-width: 100%;
@@ -21,10 +27,10 @@ img {
 }
 
 .inbox_msg {
-	border: 1px solid #c4c4c4;
+	/* border: 1px solid #c4c4c4; */
 	clear: both;
 	overflow: hidden;
-	height: 95vh;
+	/* height: 95vh; */
 }
 
 .top_spac {
@@ -114,7 +120,7 @@ img {
 }
 
 .inbox_chat {
-	height: 80vh;
+	/* height: 80vh; */
 	overflow-y: scroll;
 }
 
@@ -158,6 +164,7 @@ img {
 .mesgs {
 	float: left;
 	padding: 12px 5px 0 3px;
+	height: 95vh;
 	width: 100%;
 }
 
@@ -211,15 +218,25 @@ img {
 	top: 11px;
 	width: 33px;
 }
-
+.msg_history {
+	height: 91%;
+   overflow-y: auto;
+}
 .messaging {
 	padding: 0 0 0 0;
 }
-
-.msg_history {
-	height: 80vh;
-	overflow-y: auto;
-}
+@media screen and (min-height: 1100px) {
+	.msg_history {
+		height: 95%;
+	   overflow-y: auto;
+   }
+	}
+	@media screen and (min-height: 650px)  and (max-height: 670px) {
+		.msg_history {
+			height: 94%;
+		   overflow-y: auto;
+	   }
+		}
 
 .message {
 	list-style-type: none;
